--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -9,7 +9,14 @@
       register: output
       changed_when: "'is already installed' not in output.stderr"
 
+    # - name: Install Docker Role
+    #   shell: ansible-galaxy collection install community.general
+
 - name: Prepare
   hosts: all
   roles:
-    - { role: geerlingguy.docker, become: yes }
+    - role: geerlingguy.docker
+      vars:
+        docker_users:
+          - "{{ansible_user}}"
+      become: yes
