using path to find docker-compose

--- a/roles/docker_compose/tasks/deploy_vms.yml
+++ b/roles/docker_compose/tasks/deploy_vms.yml
@@ -34,7 +34,7 @@
 
 - name: Deploy Containers
   shell: |
-    /usr/local/bin/docker-compose up -d {{inventory_hostname}}
+    docker-compose up -d {{inventory_hostname}}
   args:
     chdir: "/opt/confluent/{{inventory_hostname}}"
   register: startup
