adding uid/gid into role itself

--- a/roles/ssl/tasks/ca.yml
+++ b/roles/ssl/tasks/ca.yml
@@ -3,6 +3,8 @@
   file:
     path: "{{ca_output_dir}}"
     state: directory
+    owner: "{{ uid }}"
+    group: "{{ gid }}"
 
 - name: Create Certificate Authority
   shell: |
@@ -11,7 +13,8 @@
       -out {{ca_cert_path}} \
       -days 365 \
       -subj '/CN=ca1.test.confluent.io/OU=TEST/O=CONFLUENT/L=PaloAlto/S=Ca/C=US' \
-      -passin pass:{{ca_password}} -passout pass:{{ca_password}}
+      -passin pass:{{ca_password}} -passout pass:{{ca_password}} && \
+    chown -R {{uid}}:{{gid}} {{ca_output_dir}}
   args:
     # TODO might want the ability to force recreation here
     creates: "{{ca_key_path}}"
