--- a/roles/ssl/tasks/main.yml
+++ b/roles/ssl/tasks/main.yml
@@ -3,8 +3,6 @@
   file:
     path: "{{component_output_dir}}"
     state: directory
-    owner: "{{ uid }}"
-    group: "{{ gid }}"
 
 - name: Create Truststore and Import the CA Cert
   shell: |
@@ -13,8 +11,7 @@
       -alias CARoot \
       -import -file {{ca_cert_path}} \
       -storepass {{truststore_storepass}} \
-      -keypass {{truststore_storepass}} && \
-    chown -R {{uid}}:{{gid}} {{truststore_path}}
+      -keypass {{truststore_storepass}}
   args:
     # Assuming the truststore is correct if exists
     creates: "{{truststore_path}}"
@@ -61,8 +58,7 @@
       -days {{keystore_expiration_days}} -CAcreateserial \
       -passin pass:{{ca_password}} \
       -extfile {{component_output_dir}}/openssl-san.cnf \
-      -extensions v3_req && \
-    chown -R {{uid}}:{{gid}} {{cert_path}}
+      -extensions v3_req
 
     # Import the CA cert into the Keystore
     keytool -noprompt -keystore {{keystore_path}} \
@@ -80,8 +76,6 @@
       -ext "SAN=dns:{{hostname}}" \
       -storepass {{keystore_storepass}} \
       -keypass {{keystore_storepass}}
-
-    chown -R {{uid}}:{{gid}} {{keystore_path}}
   args:
     # Assuming the keystore is correct if exists
     creates: "{{keystore_path}}"
@@ -92,8 +86,7 @@
       -in {{keystore_path}} \
       -passin pass:{{keystore_storepass}} \
       -nodes -nocerts \
-      -out {{key_path}} && \
-    chown -R {{uid}}:{{gid}} {{key_path}}
+      -out {{key_path}}
   args:
     # Assuming the key is correct if exists
     creates: "{{key_path}}"
@@ -106,3 +99,10 @@
     - "{{component_output_dir}}/client.csr"
     - "{{component_output_dir}}/openssl-san.cnf"
     - "{{ca_output_dir}}/ca.srl"
+
+- name: Ensure correct ownership for SSL Files
+  file:
+    path: "{{component_output_dir}}"
+    recurse: true
+    owner: "{{ uid }}"
+    group: "{{ gid }}"
